[package]
name = "aptos-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
futures-core = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
aptos-sdk = { workspace = true }
agger-contract-types = { path = "../contract-types" }
