[package]
name = "agger-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
move-package = { workspace = true }
move-compiler = { workspace = true }
movelang = { workspace = true }
move-core-types.workspace=true
agger-types={path="../types"}
agger-vk-generation = {path="../vk-generation"}
