[package]
name = "agger-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
bcs = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util.workspace = true
clap = { workspace = true }
threadpool.workspace = true
aptos-events = { path = "../aptos-events" }
agger-storage = { path = "../storage" }
agger-contract-types = { path = "../contract-types" }
agger-prove-dispatcher = { path = "../prove-dispatcher" }
move-helpers = { path = "../utils/move-helpers" }
query-module-resolver = { path = "../query-module-resolver" }
