[package]
name = "agger-prove-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bcs.workspace = true
futures-util.workspace = true
halo2_proofs.workspace = true
log.workspace = true
threadpool.workspace = true
tokio.workspace = true
move-core-types.workspace = true
move-binary-format.workspace = true
zkmove-vm-circuit.workspace = true
zkmove-vm.workspace = true
movelang.workspace = true
#agger-types = { path = "../types" }
fake-rng = { path = "../utils/fake-rng" }
agger-contract-types = { path = "../contract-types" }
