[package]
name = "query-module-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hex.workspace = true
aptos-sdk = { workspace = true }
move-binary-format.workspace = true
move-core-types.workspace = true
serde_json.workspace = true
futures-util.workspace=true
agger-contract-types = { path = "../contract-types" }
move-helpers = { path = "../utils/move-helpers" }
