[package]
name = "agger-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
aptos-schemadb.workspace = true
agger-contract-types = { path = "../contract-types" }
